Aggiornate specifiche OpenAPI
